@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020170701"
-#define public MagickPackageReleaseDate "snapshot-20170701"
+#define public MagickPackageVersionAddendum ".020170702"
+#define public MagickPackageReleaseDate "snapshot-20170702"
